# bars_test

./: .gitignore  README.md  pyproject.toml  requirements.txt
m3_project/app/: actions.py  app_meta.py  ui.py
m3_project/m3_project/: settings.py
